--- a/alvin_MMR_oligo_generator.ipynb
+++ b/alvin_MMR_oligo_generator.ipynb
@@ -2440,320 +2440,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Hugo_Symbol</th>\n",
-       "      <th>Chromosome</th>\n",
-       "      <th>Start_Position</th>\n",
-       "      <th>End_Position</th>\n",
-       "      <th>Variant_Type</th>\n",
-       "      <th>Reference_Allele</th>\n",
-       "      <th>Tumor_Seq_Allele2</th>\n",
-       "      <th>Strand</th>\n",
-       "      <th>HGVSp</th>\n",
-       "      <th>num_occurences</th>\n",
-       "      <th>codon</th>\n",
-       "      <th>ref_aa</th>\n",
-       "      <th>mut_aa</th>\n",
-       "      <th>Most frequent HGVSc</th>\n",
-       "      <th>classification</th>\n",
-       "      <th>transcript_id_TRUE</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>TP53</td>\n",
-       "      <td>17</td>\n",
-       "      <td>7578406</td>\n",
-       "      <td>7578406</td>\n",
-       "      <td>SNP</td>\n",
-       "      <td>C</td>\n",
-       "      <td>T</td>\n",
-       "      <td>+</td>\n",
-       "      <td>p.Arg175His</td>\n",
-       "      <td>955.0</td>\n",
-       "      <td>175.0</td>\n",
-       "      <td>Arg</td>\n",
-       "      <td>His</td>\n",
-       "      <td>ENST00000269305.4:c.524G&gt;A</td>\n",
-       "      <td>missense</td>\n",
-       "      <td>ENST00000269305.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>TP53</td>\n",
-       "      <td>17</td>\n",
-       "      <td>7577538</td>\n",
-       "      <td>7577538</td>\n",
-       "      <td>SNP</td>\n",
-       "      <td>C</td>\n",
-       "      <td>T</td>\n",
-       "      <td>+</td>\n",
-       "      <td>p.Arg248Gln</td>\n",
-       "      <td>620.0</td>\n",
-       "      <td>248.0</td>\n",
-       "      <td>Arg</td>\n",
-       "      <td>Gln</td>\n",
-       "      <td>ENST00000269305.4:c.743G&gt;A</td>\n",
-       "      <td>missense</td>\n",
-       "      <td>ENST00000269305.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>TP53</td>\n",
-       "      <td>17</td>\n",
-       "      <td>7577121</td>\n",
-       "      <td>7577121</td>\n",
-       "      <td>SNP</td>\n",
-       "      <td>G</td>\n",
-       "      <td>A</td>\n",
-       "      <td>+</td>\n",
-       "      <td>p.Arg273Cys</td>\n",
-       "      <td>580.0</td>\n",
-       "      <td>273.0</td>\n",
-       "      <td>Arg</td>\n",
-       "      <td>Cys</td>\n",
-       "      <td>ENST00000269305.4:c.817C&gt;T</td>\n",
-       "      <td>missense</td>\n",
-       "      <td>ENST00000269305.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>TP53</td>\n",
-       "      <td>17</td>\n",
-       "      <td>7577120</td>\n",
-       "      <td>7577120</td>\n",
-       "      <td>SNP</td>\n",
-       "      <td>C</td>\n",
-       "      <td>T</td>\n",
-       "      <td>+</td>\n",
-       "      <td>p.Arg273His</td>\n",
-       "      <td>565.0</td>\n",
-       "      <td>273.0</td>\n",
-       "      <td>Arg</td>\n",
-       "      <td>His</td>\n",
-       "      <td>ENST00000269305.4:c.818G&gt;A</td>\n",
-       "      <td>missense</td>\n",
-       "      <td>ENST00000269305.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>TP53</td>\n",
-       "      <td>17</td>\n",
-       "      <td>7577539</td>\n",
-       "      <td>7577539</td>\n",
-       "      <td>SNP</td>\n",
-       "      <td>G</td>\n",
-       "      <td>A</td>\n",
-       "      <td>+</td>\n",
-       "      <td>p.Arg248Trp</td>\n",
-       "      <td>499.0</td>\n",
-       "      <td>248.0</td>\n",
-       "      <td>Arg</td>\n",
-       "      <td>Trp</td>\n",
-       "      <td>ENST00000269305.4:c.742C&gt;T</td>\n",
-       "      <td>missense</td>\n",
-       "      <td>ENST00000269305.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1234</th>\n",
-       "      <td>TP53</td>\n",
-       "      <td>17</td>\n",
-       "      <td>7572987</td>\n",
-       "      <td>7572989</td>\n",
-       "      <td>ONP</td>\n",
-       "      <td>ACC</td>\n",
-       "      <td>TCC</td>\n",
-       "      <td>+</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>374.0</td>\n",
-       "      <td>Gly</td>\n",
-       "      <td>Gly</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>neutral</td>\n",
-       "      <td>ENST00000269305.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1235</th>\n",
-       "      <td>TP53</td>\n",
-       "      <td>17</td>\n",
-       "      <td>7572975</td>\n",
-       "      <td>7572977</td>\n",
-       "      <td>ONP</td>\n",
-       "      <td>GGA</td>\n",
-       "      <td>ACT</td>\n",
-       "      <td>+</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>378.0</td>\n",
-       "      <td>Ser</td>\n",
-       "      <td>Ser</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>neutral</td>\n",
-       "      <td>ENST00000269305.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1236</th>\n",
-       "      <td>TP53</td>\n",
-       "      <td>17</td>\n",
-       "      <td>7572963</td>\n",
-       "      <td>7572965</td>\n",
-       "      <td>ONP</td>\n",
-       "      <td>TTT</td>\n",
-       "      <td>CTT</td>\n",
-       "      <td>+</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>382.0</td>\n",
-       "      <td>Lys</td>\n",
-       "      <td>Lys</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>neutral</td>\n",
-       "      <td>ENST00000269305.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1237</th>\n",
-       "      <td>TP53</td>\n",
-       "      <td>17</td>\n",
-       "      <td>7572951</td>\n",
-       "      <td>7572953</td>\n",
-       "      <td>ONP</td>\n",
-       "      <td>CTT</td>\n",
-       "      <td>TTT</td>\n",
-       "      <td>+</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>386.0</td>\n",
-       "      <td>Lys</td>\n",
-       "      <td>Lys</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>neutral</td>\n",
-       "      <td>ENST00000269305.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1238</th>\n",
-       "      <td>TP53</td>\n",
-       "      <td>17</td>\n",
-       "      <td>7572939</td>\n",
-       "      <td>7572941</td>\n",
-       "      <td>ONP</td>\n",
-       "      <td>AGG</td>\n",
-       "      <td>TGG</td>\n",
-       "      <td>+</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>390.0</td>\n",
-       "      <td>Pro</td>\n",
-       "      <td>Pro</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>neutral</td>\n",
-       "      <td>ENST00000269305.4</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1239 rows × 16 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "     Hugo_Symbol  Chromosome  Start_Position  End_Position Variant_Type  \\\n",
-       "0           TP53          17         7578406       7578406          SNP   \n",
-       "1           TP53          17         7577538       7577538          SNP   \n",
-       "2           TP53          17         7577121       7577121          SNP   \n",
-       "3           TP53          17         7577120       7577120          SNP   \n",
-       "4           TP53          17         7577539       7577539          SNP   \n",
-       "...          ...         ...             ...           ...          ...   \n",
-       "1234        TP53          17         7572987       7572989          ONP   \n",
-       "1235        TP53          17         7572975       7572977          ONP   \n",
-       "1236        TP53          17         7572963       7572965          ONP   \n",
-       "1237        TP53          17         7572951       7572953          ONP   \n",
-       "1238        TP53          17         7572939       7572941          ONP   \n",
-       "\n",
-       "     Reference_Allele Tumor_Seq_Allele2 Strand        HGVSp  num_occurences  \\\n",
-       "0                   C                 T      +  p.Arg175His           955.0   \n",
-       "1                   C                 T      +  p.Arg248Gln           620.0   \n",
-       "2                   G                 A      +  p.Arg273Cys           580.0   \n",
-       "3                   C                 T      +  p.Arg273His           565.0   \n",
-       "4                   G                 A      +  p.Arg248Trp           499.0   \n",
-       "...               ...               ...    ...          ...             ...   \n",
-       "1234              ACC               TCC      +          NaN             NaN   \n",
-       "1235              GGA               ACT      +          NaN             NaN   \n",
-       "1236              TTT               CTT      +          NaN             NaN   \n",
-       "1237              CTT               TTT      +          NaN             NaN   \n",
-       "1238              AGG               TGG      +          NaN             NaN   \n",
-       "\n",
-       "      codon ref_aa mut_aa         Most frequent HGVSc classification  \\\n",
-       "0     175.0    Arg    His  ENST00000269305.4:c.524G>A       missense   \n",
-       "1     248.0    Arg    Gln  ENST00000269305.4:c.743G>A       missense   \n",
-       "2     273.0    Arg    Cys  ENST00000269305.4:c.817C>T       missense   \n",
-       "3     273.0    Arg    His  ENST00000269305.4:c.818G>A       missense   \n",
-       "4     248.0    Arg    Trp  ENST00000269305.4:c.742C>T       missense   \n",
-       "...     ...    ...    ...                         ...            ...   \n",
-       "1234  374.0    Gly    Gly                         NaN        neutral   \n",
-       "1235  378.0    Ser    Ser                         NaN        neutral   \n",
-       "1236  382.0    Lys    Lys                         NaN        neutral   \n",
-       "1237  386.0    Lys    Lys                         NaN        neutral   \n",
-       "1238  390.0    Pro    Pro                         NaN        neutral   \n",
-       "\n",
-       "     transcript_id_TRUE  \n",
-       "0     ENST00000269305.4  \n",
-       "1     ENST00000269305.4  \n",
-       "2     ENST00000269305.4  \n",
-       "3     ENST00000269305.4  \n",
-       "4     ENST00000269305.4  \n",
-       "...                 ...  \n",
-       "1234  ENST00000269305.4  \n",
-       "1235  ENST00000269305.4  \n",
-       "1236  ENST00000269305.4  \n",
-       "1237  ENST00000269305.4  \n",
-       "1238  ENST00000269305.4  \n",
-       "\n",
-       "[1239 rows x 16 columns]"
+       "['Hugo_Symbol',\n",
+       " 'Chromosome',\n",
+       " 'Start_Position',\n",
+       " 'End_Position',\n",
+       " 'Variant_Type',\n",
+       " 'Reference_Allele',\n",
+       " 'Tumor_Seq_Allele2',\n",
+       " 'Strand',\n",
+       " 'HGVSp',\n",
+       " 'num_occurences',\n",
+       " 'codon',\n",
+       " 'ref_aa',\n",
+       " 'mut_aa',\n",
+       " 'Most frequent HGVSc',\n",
+       " 'classification',\n",
+       " 'transcript_id_TRUE']"
       ]
      },
-     "execution_count": 288,
+     "execution_count": 294,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2763,16 +2474,174 @@
     "p53_filtered\n",
     "\n",
     "#rename the appropriate columns to match up with the formula, then generate...\n",
-    "#or just make a different version of the function; probably easier...\n"
+    "#or just make a different version of the function; probably easier...\n",
+    "cols_to_save = list(p53_filtered.keys())\n",
+    "cols_to_save"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [],
    "source": [
-    "    cols_to_save = ['COUNT', 'Hugo_Symbol', 'Chromosome', 'Start_Position', 'End_Position', 'Consequence', 'Variant_Classification', 'Variant_Type', 'Reference_Allele', 'Tumor_Seq_Allele2', 'Tumor_Sample_Barcode', 'RefSeq', 'Protein_position', 'Exon_Number', 'HGVSc', 'HGVSp', 'HGVSp_Short', 'transcript_id_TRUE']\n"
+    "def df_formatter(df, cols_to_save, context_size = 60):\n",
+    "\n",
+    "    \"\"\" \n",
+    "    Takes in variants (in cBioPortal format)\n",
+    "    and outputs dataframe with WT and ALT oligos with designated context_size\n",
+    "    context_size = the amount of nt on either side of the variant e.g. AAA(A/G)AAA = context_size of 3\n",
+    "    \"\"\"\n",
+    "\n",
+    "    wt_w_context = []\n",
+    "    alt_w_context = []\n",
+    "\n",
+    "    seq_start = []\n",
+    "    seq_end = []\n",
+    "\n",
+    "    for i, val in df.iterrows():\n",
+    "        vt = val['Variant_Type']\n",
+    "        s = val['Start_Position']\n",
+    "        e = val['End_Position']\n",
+    "        ref = val['Reference_Allele']\n",
+    "        alt = val['Tumor_Seq_Allele2']\n",
+    "        chrom = val['Chromosome']\n",
+    "\n",
+    "        if chrom == 'X':\n",
+    "            chrom = 22\n",
+    "        elif chrom=='Y':\n",
+    "            chrom = 23\n",
+    "        else:\n",
+    "            chrom = int(chrom)-1\n",
+    "\n",
+    "        chr_seq = records[index_list[chrom]].seq.upper()\n",
+    "\n",
+    "        if vt in ['SNP', 'ONP', 'DNP']:\n",
+    "            ref = ref\n",
+    "            alt = alt\n",
+    "            #assert ref == chr_seq[s-1:e], print(ref, chr_seq[s-1:e])\n",
+    "            left_context = chr_seq[s-1-context_size:s-1]\n",
+    "            right_context = chr_seq[e:e+context_size]\n",
+    "\n",
+    "        elif vt =='INS':\n",
+    "            ref = ''\n",
+    "            alt = alt\n",
+    "            #left_context = chr_seq[s-1-context_size:s+1] #need to do this since INS reference alleles are blank\n",
+    "            left_context = chr_seq[s-1-context_size:s]\n",
+    "            right_context = chr_seq[e-1:e+context_size]\n",
+    "\n",
+    "        elif vt=='DEL':\n",
+    "            ref = ref\n",
+    "            alt = ''\n",
+    "            left_context = chr_seq[s-1-context_size:s-1]\n",
+    "            right_context = chr_seq[e:e+context_size]\n",
+    "\n",
+    "        wt_seq = left_context + ref + right_context\n",
+    "        alt_seq = left_context + alt + right_context\n",
+    "\n",
+    "        wt_w_context.append(str(wt_seq))\n",
+    "        alt_w_context.append(str(alt_seq))\n",
+    "\n",
+    "        start = s-context_size\n",
+    "        end = e+context_size\n",
+    "\n",
+    "        seq_start.append(start)\n",
+    "        seq_end.append(end)\n",
+    "\n",
+    "        assert str(chr_seq[start-1:end])==str(wt_seq), print(chr_seq[start-1:end] + '\\n' + str(wt_seq))\n",
+    "                                                            \n",
+    "\n",
+    "    #cols_to_save = ['COUNT', 'Hugo_Symbol', 'Chromosome', 'Start_Position', 'End_Position', 'Consequence', 'Variant_Classification', 'Variant_Type', 'Reference_Allele', 'Tumor_Seq_Allele2', 'Tumor_Sample_Barcode', 'RefSeq', 'Protein_position', 'Exon_Number', 'HGVSc', 'HGVSp', 'HGVSp_Short', 'transcript_id_TRUE']\n",
+    "    df_new = df[cols_to_save]\n",
+    "\n",
+    "    df_new['seq_start'] = seq_start\n",
+    "    df_new['seq_end'] = seq_end\n",
+    "    df_new['wt_w_context'] = wt_w_context\n",
+    "    df_new['alt_w_context'] = alt_w_context\n",
+    "    df_new = df_new.reset_index()\n",
+    "    \n",
+    "    return df_new"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 295,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p53_oligos = df_formatter(p53_filtered, cols_to_save)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 297,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p53_oligos = p53_oligos.rename(columns = {'HGVSp':'HGVSp_Short'}).drop(columns = 'Strand')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 299,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p53_oligos = frame_determiner(p53_oligos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 363,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DEL\n",
+      "-\n",
+      "1\n",
+      "p.Asn263IlefsTer82\n",
+      "GNLLGRNSFEVRVCACPGRDR\n",
+      "GIYWDGTALRCVFVPVLGETG\n"
+     ]
+    }
+   ],
+   "source": [
+    "#and spot checking\n",
+    "i = 1106\n",
+    "\n",
+    "wt1 = p53_oligos.iloc[i]['CDS_wt_correct_orientation']\n",
+    "alt1 = p53_oligos.loc[i]['CDS_alt_correct_orientation']\n",
+    "frame = p53_oligos.iloc[i]['Frame']\n",
+    "hgvsp = p53_oligos.iloc[i]['HGVSp_Short']\n",
+    "s = p53_oligos.iloc[i]['Strand']\n",
+    "v = p53_oligos.iloc[i]['Variant_Type']\n",
+    "print(v)\n",
+    "print(s)\n",
+    "print(frame)\n",
+    "print(hgvsp)\n",
+    "print(Bio.Seq.Seq(wt1[frame:]).transcribe().translate())\n",
+    "print(Bio.Seq.Seq(alt1[frame:]).transcribe().translate())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 342,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p53_oligos['MMR_evasive_amenable']=True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 344,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#p53_oligos.to_csv('p53_library_oligos.csv', index=False)"
    ]
   }
  ],
