--- a/pegg2.ipynb
+++ b/pegg2.ipynb
@@ -1262,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1271,7 +1271,10 @@
     "    frame_list = []\n",
     "    coding_start_list = []\n",
     "    coding_end_list = []\n",
+    "    coding_alt_start_list = []\n",
+    "    coding_alt_end_list = []\n",
     "    CDS_WT_correct_orientation = []\n",
+    "    CDS_alt_correct_orientation = []\n",
     "\n",
     "    for index1, val in exon_subs.iterrows():\n",
     "        hg = val['HGVSp_Short']\n",
@@ -1327,6 +1330,9 @@
     "            coding_start_list.append('None')\n",
     "            coding_end_list.append('None')\n",
     "            CDS_WT_correct_orientation.append('None')\n",
+    "            CDS_alt_correct_orientation.append('None')\n",
+    "            coding_alt_start_list.append('None')\n",
+    "            coding_alt_end_list.append('None')\n",
     "            #means it's not in a coding region (could be splice or intron)\n",
     "        \n",
     "        else:\n",
@@ -1347,8 +1353,17 @@
     "\n",
     "            subseq = Bio.Seq.Seq(wt_seq[wt_start:wt_end])\n",
     "\n",
+    "            #also generate the alternate sequence:\n",
+    "            diff = len(alt_seq)-len(wt_seq)\n",
+    "            alt_start = wt_start\n",
+    "            alt_end = wt_end - diff\n",
+    "            alt_subseq = Bio.Seq.Seq(alt_seq[alt_start:alt_end])\n",
+    "            coding_alt_start_list.append(alt_start)\n",
+    "            coding_alt_end_list.append(alt_end)\n",
+    "\n",
     "            if strand =='-':\n",
     "                subseq = subseq.reverse_complement()\n",
+    "                alt_subseq = alt_subseq.reverse_complement()\n",
     "                inc_start = inc[-1]\n",
     "                inc_end = inc[0]\n",
     "                full_prot = str(Bio.Seq.Seq(wt_dna).reverse_complement().transcribe().translate())\n",
@@ -1356,6 +1371,7 @@
     "                codon_locs = codon_locs[::-1]\n",
     "\n",
     "            CDS_WT_correct_orientation.append(str(subseq))\n",
+    "            CDS_alt_correct_orientation.append(str(alt_subseq))\n",
     "\n",
     "            #determine the frame\n",
     "            start_idx = codon_locs.index(inc_start)\n",
@@ -1374,9 +1390,12 @@
     "            \n",
     "    \n",
     "    exon_subs['Frame'] = frame_list\n",
-    "    exon_subs['CDS_start'] = coding_start_list\n",
-    "    exon_subs['CDS_end'] = coding_end_list\n",
-    "    exon_subs['CDS_WT_correct_orientation'] = CDS_WT_correct_orientation\n",
+    "    exon_subs['CDS_wt_start'] = coding_start_list\n",
+    "    exon_subs['CDS_wt_end'] = coding_end_list\n",
+    "    exon_subs['CDS_wt_correct_orientation'] = CDS_WT_correct_orientation\n",
+    "    exon_subs['CDS_alt_start'] = coding_alt_start_list\n",
+    "    exon_subs['CDS_alt_end'] = coding_alt_end_list\n",
+    "    exon_subs['CDS_alt_correct_orientation'] = CDS_alt_correct_orientation\n",
     "\n",
     "    return exon_subs, codon_locs, start_idx, wt_seq, subseq\n",
     "\n"
@@ -1863,7 +1882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1872,7 +1891,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 275,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "p.R13C\n",
+      "KGGKNRRRGKNENESEKRELVFKEDG\n",
+      "KGGKNRCRGKNENESEKRELVFKEDG\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 354\n",
+    "wt1 = e.iloc[i]['CDS_wt_correct_orientation']\n",
+    "alt1 = e.iloc[i]['CDS_alt_correct_orientation']\n",
+    "frame = e.iloc[i]['Frame']\n",
+    "hgvsp = e.iloc[i]['HGVSp_Short']\n",
+    "print(frame)\n",
+    "print(hgvsp)\n",
+    "print(Bio.Seq.Seq(wt1[frame:]).transcribe().translate())\n",
+    "print(Bio.Seq.Seq(alt1[frame:]).transcribe().translate())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 269,
    "metadata": {},
    "outputs": [
     {
@@ -1921,9 +1968,12 @@
        "      <th>wt_w_context</th>\n",
        "      <th>alt_w_context</th>\n",
        "      <th>Frame</th>\n",
-       "      <th>CDS_start</th>\n",
-       "      <th>CDS_end</th>\n",
-       "      <th>CDS_WT_correct_orientation</th>\n",
+       "      <th>CDS_wt_start</th>\n",
+       "      <th>CDS_wt_end</th>\n",
+       "      <th>CDS_wt_correct_orientation</th>\n",
+       "      <th>CDS_alt_start</th>\n",
+       "      <th>CDS_alt_end</th>\n",
+       "      <th>CDS_alt_correct_orientation</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1954,6 +2004,9 @@
        "      <td>CTGGGGGCAGCTCGTGGTGAGGCTCCCCTTTCTTGCGGAGATTCTC...</td>\n",
        "      <td>CTGGGGGCAGCTCGTGGTGAGGCTCCCCTTTCTTGCGGAGATTCTC...</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>121</td>\n",
+       "      <td>GGTAATCTACTGGGACGGAACAGCTTTGAGGTGCGTGTTTGTGCCT...</td>\n",
        "      <td>0</td>\n",
        "      <td>121</td>\n",
        "      <td>GGTAATCTACTGGGACGGAACAGCTTTGAGGTGCGTGTTTGTGCCT...</td>\n",
@@ -1988,6 +2041,9 @@
        "      <td>0</td>\n",
        "      <td>121</td>\n",
        "      <td>ACCATGCCACCAAGCAGAAGTAAAACACCTCCACCACCTCCTCAAA...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>121</td>\n",
+       "      <td>ACCATGCCACCAAGCAGAAGTAAAACACCTCCACCACCTCCTCAAA...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -2016,6 +2072,9 @@
        "      <td>CGCGGAATTGGTCTAGGCAACTACCATCCAGCAACAGAAAATCCAG...</td>\n",
        "      <td>CGCGGAATTGGTCTAGGCAACTACCATCCAGCAACAGAAAATCCAG...</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>121</td>\n",
+       "      <td>CGCGGAATTGGTCTAGGCAACTACCATCCAGCAACAGAAAATCCAG...</td>\n",
        "      <td>0</td>\n",
        "      <td>121</td>\n",
        "      <td>CGCGGAATTGGTCTAGGCAACTACCATCCAGCAACAGAAAATCCAG...</td>\n",
@@ -2050,6 +2109,9 @@
        "      <td>0</td>\n",
        "      <td>121</td>\n",
        "      <td>CTGGGACGGAACAGCTTTGAGGTGCGTGTTTGTGCCTGTCCTGGGA...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>121</td>\n",
+       "      <td>CTGGGACGGAACAGCTTTGAGGTGCGTGTTTGTGCCTGTCCTGGGA...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -2081,9 +2143,15 @@
        "      <td>0</td>\n",
        "      <td>121</td>\n",
        "      <td>TGGACGGGGCCGTGCTGGACGGCCGCGAGCTGCGGGTGCAAATGGC...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>121</td>\n",
+       "      <td>TGGACGGGGCCGTGCTGGACGGCCGCGAGCTGCGGGTGCAAATGGC...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -2143,6 +2211,9 @@
        "      <td>0</td>\n",
        "      <td>121</td>\n",
        "      <td>GGCTCTAGAACTAATTTATCCTATTCCAGGTCAGAACGATCTCATT...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>121</td>\n",
+       "      <td>GGCTCTAGAACTAATTTATCCTATTCCAGGTCAGAACGATCTCATT...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>352</th>\n",
@@ -2171,6 +2242,9 @@
        "      <td>ACACCTTGAACTGGGCCAGCTGCAGGGGCATGCCCTGAGGTGGGCA...</td>\n",
        "      <td>ACACCTTGAACTGGGCCAGCTGCAGGGGCATGCCCTGAGGTGGGCA...</td>\n",
        "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>121</td>\n",
+       "      <td>AGCCATTAACCCCTCCTACAACCCCCCTCTCACCCACCCATCAGAA...</td>\n",
        "      <td>0</td>\n",
        "      <td>121</td>\n",
        "      <td>AGCCATTAACCCCTCCTACAACCCCCCTCTCACCCACCCATCAGAA...</td>\n",
@@ -2205,6 +2279,9 @@
        "      <td>0</td>\n",
        "      <td>121</td>\n",
        "      <td>TTCGAAGCTGTGCTACACTACAAACATCAGAACCAAGCCCGCGATG...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>121</td>\n",
+       "      <td>TTCGAAGCTGTGCTACACTACAAACATCAGAACCAAGCCCGCGATG...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>354</th>\n",
@@ -2236,6 +2313,9 @@
        "      <td>0</td>\n",
        "      <td>81</td>\n",
        "      <td>GTAAAGGAGGTAAAAACAGACGCAGGGGTAAGAATGAGAATGAATC...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>81</td>\n",
+       "      <td>GTAAAGGAGGTAAAAACAGATGCAGGGGTAAGAATGAGAATGAATC...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>355</th>\n",
@@ -2267,10 +2347,13 @@
        "      <td>0</td>\n",
        "      <td>121</td>\n",
        "      <td>AGGCCCAATGGCAGAGCTAGTGCCTCGGGCCCCAGAGTCCCCACGA...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>121</td>\n",
+       "      <td>AGGCCCAATGGCAGAGCTAGTGCCTCGGGCCCCAGAGTCCCCACGA...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>356 rows × 28 columns</p>\n",
+       "<p>356 rows × 31 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -2352,36 +2435,62 @@
        "354   20156660   20156780  GACCATCCTCTTTGAATACCAGTTCTCTTTTTTCAGATTCATTCTC...   \n",
        "355    6528277    6528397  CAGGTGGGGCGGGCAGCTCAACAGCTGGACAGGGGTGCGGCGGCGG...   \n",
        "\n",
-       "                                         alt_w_context  Frame  CDS_start  \\\n",
-       "0    CTGGGGGCAGCTCGTGGTGAGGCTCCCCTTTCTTGCGGAGATTCTC...      0          0   \n",
-       "1    ACCATGCCACCAAGCAGAAGTAAAACACCTCCACCACCTCCTCAAA...      0          0   \n",
-       "2    CGCGGAATTGGTCTAGGCAACTACCATCCAGCAACAGAAAATCCAG...      0          0   \n",
-       "3    TAGTGCTCCCTGGGGGCAGCTCGTGGTGAGGCTCCCCTTTCTTGCG...      0          0   \n",
-       "4    TAGCCACCGCCCCCGTACCTGCGGGGTGGCGGTCCCCGGCGGCTGT...      2          0   \n",
-       "..                                                 ...    ...        ...   \n",
-       "351  CTGTGTATGGCCGAGAATAGCGCGTCCTCTCTCGATAAGGGGAGCT...      0          0   \n",
-       "352  ACACCTTGAACTGGGCCAGCTGCAGGGGCATGCCCTGAGGTGGGCA...      2          0   \n",
-       "353  CAGTGGCGGCCGTGGTGGCGGCAGTGGTGGCGTTGGTGATGTTGGC...      0          0   \n",
-       "354  GACCATCCTCTTTGAATACCAGTTCTCTTTTTTCAGATTCATTCTC...      2          0   \n",
-       "355  CAGGTGGGGCGGGCAGCTCAACAGCTGGACAGGGGTGCGGCGGCGG...      1          0   \n",
+       "                                         alt_w_context  Frame  CDS_wt_start  \\\n",
+       "0    CTGGGGGCAGCTCGTGGTGAGGCTCCCCTTTCTTGCGGAGATTCTC...      0             0   \n",
+       "1    ACCATGCCACCAAGCAGAAGTAAAACACCTCCACCACCTCCTCAAA...      0             0   \n",
+       "2    CGCGGAATTGGTCTAGGCAACTACCATCCAGCAACAGAAAATCCAG...      0             0   \n",
+       "3    TAGTGCTCCCTGGGGGCAGCTCGTGGTGAGGCTCCCCTTTCTTGCG...      0             0   \n",
+       "4    TAGCCACCGCCCCCGTACCTGCGGGGTGGCGGTCCCCGGCGGCTGT...      2             0   \n",
+       "..                                                 ...    ...           ...   \n",
+       "351  CTGTGTATGGCCGAGAATAGCGCGTCCTCTCTCGATAAGGGGAGCT...      0             0   \n",
+       "352  ACACCTTGAACTGGGCCAGCTGCAGGGGCATGCCCTGAGGTGGGCA...      2             0   \n",
+       "353  CAGTGGCGGCCGTGGTGGCGGCAGTGGTGGCGTTGGTGATGTTGGC...      0             0   \n",
+       "354  GACCATCCTCTTTGAATACCAGTTCTCTTTTTTCAGATTCATTCTC...      2             0   \n",
+       "355  CAGGTGGGGCGGGCAGCTCAACAGCTGGACAGGGGTGCGGCGGCGG...      1             0   \n",
        "\n",
-       "     CDS_end                         CDS_WT_correct_orientation  \n",
-       "0        121  GGTAATCTACTGGGACGGAACAGCTTTGAGGTGCGTGTTTGTGCCT...  \n",
-       "1        121  ACCATGCCACCAAGCAGAAGTAAAACACCTCCACCACCTCCTCAAA...  \n",
-       "2        121  CGCGGAATTGGTCTAGGCAACTACCATCCAGCAACAGAAAATCCAG...  \n",
-       "3        121  CTGGGACGGAACAGCTTTGAGGTGCGTGTTTGTGCCTGTCCTGGGA...  \n",
-       "4        121  TGGACGGGGCCGTGCTGGACGGCCGCGAGCTGCGGGTGCAAATGGC...  \n",
-       "..       ...                                                ...  \n",
-       "351      121  GGCTCTAGAACTAATTTATCCTATTCCAGGTCAGAACGATCTCATT...  \n",
-       "352      121  AGCCATTAACCCCTCCTACAACCCCCCTCTCACCCACCCATCAGAA...  \n",
-       "353      121  TTCGAAGCTGTGCTACACTACAAACATCAGAACCAAGCCCGCGATG...  \n",
-       "354       81  GTAAAGGAGGTAAAAACAGACGCAGGGGTAAGAATGAGAATGAATC...  \n",
-       "355      121  AGGCCCAATGGCAGAGCTAGTGCCTCGGGCCCCAGAGTCCCCACGA...  \n",
+       "     CDS_wt_end                         CDS_wt_correct_orientation  \\\n",
+       "0           121  GGTAATCTACTGGGACGGAACAGCTTTGAGGTGCGTGTTTGTGCCT...   \n",
+       "1           121  ACCATGCCACCAAGCAGAAGTAAAACACCTCCACCACCTCCTCAAA...   \n",
+       "2           121  CGCGGAATTGGTCTAGGCAACTACCATCCAGCAACAGAAAATCCAG...   \n",
+       "3           121  CTGGGACGGAACAGCTTTGAGGTGCGTGTTTGTGCCTGTCCTGGGA...   \n",
+       "4           121  TGGACGGGGCCGTGCTGGACGGCCGCGAGCTGCGGGTGCAAATGGC...   \n",
+       "..          ...                                                ...   \n",
+       "351         121  GGCTCTAGAACTAATTTATCCTATTCCAGGTCAGAACGATCTCATT...   \n",
+       "352         121  AGCCATTAACCCCTCCTACAACCCCCCTCTCACCCACCCATCAGAA...   \n",
+       "353         121  TTCGAAGCTGTGCTACACTACAAACATCAGAACCAAGCCCGCGATG...   \n",
+       "354          81  GTAAAGGAGGTAAAAACAGACGCAGGGGTAAGAATGAGAATGAATC...   \n",
+       "355         121  AGGCCCAATGGCAGAGCTAGTGCCTCGGGCCCCAGAGTCCCCACGA...   \n",
        "\n",
-       "[356 rows x 28 columns]"
+       "     CDS_alt_start  CDS_alt_end  \\\n",
+       "0                0          121   \n",
+       "1                0          121   \n",
+       "2                0          121   \n",
+       "3                0          121   \n",
+       "4                0          121   \n",
+       "..             ...          ...   \n",
+       "351              0          121   \n",
+       "352              0          121   \n",
+       "353              0          121   \n",
+       "354              0           81   \n",
+       "355              0          121   \n",
+       "\n",
+       "                           CDS_alt_correct_orientation  \n",
+       "0    GGTAATCTACTGGGACGGAACAGCTTTGAGGTGCGTGTTTGTGCCT...  \n",
+       "1    ACCATGCCACCAAGCAGAAGTAAAACACCTCCACCACCTCCTCAAA...  \n",
+       "2    CGCGGAATTGGTCTAGGCAACTACCATCCAGCAACAGAAAATCCAG...  \n",
+       "3    CTGGGACGGAACAGCTTTGAGGTGCGTGTTTGTGCCTGTCCTGGGA...  \n",
+       "4    TGGACGGGGCCGTGCTGGACGGCCGCGAGCTGCGGGTGCAAATGGC...  \n",
+       "..                                                 ...  \n",
+       "351  GGCTCTAGAACTAATTTATCCTATTCCAGGTCAGAACGATCTCATT...  \n",
+       "352  AGCCATTAACCCCTCCTACAACCCCCCTCTCACCCACCCATCAGAA...  \n",
+       "353  TTCGAAGCTGTGCTACACTACAAACATCAGAACCAAGCCCGCGATG...  \n",
+       "354  GTAAAGGAGGTAAAAACAGATGCAGGGGTAAGAATGAGAATGAATC...  \n",
+       "355  AGGCCCAATGGCAGAGCTAGTGCCTCGGGCCCCAGAGTCCCCACGA...  \n",
+       "\n",
+       "[356 rows x 31 columns]"
       ]
      },
-     "execution_count": 257,
+     "execution_count": 269,
      "metadata": {},
      "output_type": "execute_result"
     }
