--- a/pegg_update.ipynb
+++ b/pegg_update.ipynb
@@ -2082,6 +2082,111 @@
     "alignments = aligner.align(run_output.iloc[i]['target sequence'], edit_sens[i])\n",
     "print(alignments[0])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import Bio.Seq\n",
+    "\n",
+    "class mutation:\n",
+    "    def __init__(self, forward_sequence, mut_forward_sequence, seq_start=0, seq_end=None, chrom=None, genome=None):\n",
+    "        \"\"\" \n",
+    "        change seq_start and seq_end to correspond with chromosome coordinates\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        #WT sequence\n",
+    "        #enforce uppercase\n",
+    "        self.forward_sequence = forward_sequence.upper()\n",
+    "        rc = str(Bio.Seq.Seq(self.forward_sequence).reverse_complement())\n",
+    "        self.rev_comp_sequence = rc\n",
+    "\n",
+    "        #seq start refers to the WIDE sequence start (i.e. the WT sequence with e.g. 60 nt of context)\n",
+    "        self.seq_start = seq_start\n",
+    "        self.seq_end = seq_end\n",
+    "        self.chrom = chrom\n",
+    "        self.genome_build = genome\n",
+    "\n",
+    "        #mutation information\n",
+    "        self.mut_forward_sequence = mut_forward_sequence.upper()\n",
+    "        rc_mut = str(Bio.Seq.Seq(self.mut_forward_sequence).reverse_complement())\n",
+    "        self.mut_rev_comp_sequence = rc_mut\n",
+    "\n",
+    "        self.\n",
+    "        \n",
+    "\n",
+    "        #information about the PAM sequence location\n",
+    "        self.PAM_idx_forward = None\n",
+    "        self.PAM_idx_rev_comp = None\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mut1 = mutation(forward_sequence='ATCCGTCggagtACT')\n",
+    "mut2 = mutation(forward_sequence='ATCCGTCACAAGAGGAGAGTGAGA')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ATCCGTCGGAGTACT'"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mut1.forward_sequence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mut1.PAM_idx_forward = [1,2,3,4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mut1.PAM_idx_forward"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
